--- a/src/Resources/templates/menu/menu.html.twig
+++ b/src/Resources/templates/menu/menu.html.twig
@@ -1,11 +1,24 @@
 {# ------------------ DevBrain Component : Menu - Settings ------------------ #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ------------------ DevBrain Component : Menu - Content ------------------- #}
+{# -------------------- DevBrain Component : Menu - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="menu">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' menu') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ------------------- DevBrain Component : Menu - Content ------------------ #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Menu
 </div>
