--- a/src/Resources/templates/popover/popover.html.twig
+++ b/src/Resources/templates/popover/popover.html.twig
@@ -1,11 +1,24 @@
-{# ----------------- DevBrain Component : Popover - Settings ---------------- #}
+{# ---------------- DevBrain Component : Popover - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------ DevBrain Component : Popover - Attr ------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' popover') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ----------------- DevBrain Component : Popover - Content ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="popover">
+<div {{ get_attributes(_attr) }}>
     Popover
 </div>
