--- a/src/Resources/templates/quiz/quiz.html.twig
+++ b/src/Resources/templates/quiz/quiz.html.twig
@@ -1,11 +1,24 @@
-{# ------------------ DevBrain Component : quiz - Settings ------------------ #}
+{# ------------------ DevBrain Component : Quiz - Settings ------------------ #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ------------------ DevBrain Component : quiz - Content ------------------- #}
+{# -------------------- DevBrain Component : Quiz - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="quiz">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' quiz') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ------------------- DevBrain Component : Quiz - Content ------------------ #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Quiz
 </div>
