--- a/src/Resources/templates/stepper/stepper.html.twig
+++ b/src/Resources/templates/stepper/stepper.html.twig
@@ -1,11 +1,24 @@
-{# ----------------- DevBrain Component : Stepper - Settings ---------------- #}
+{# ---------------- DevBrain Component : Stepper - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------ DevBrain Component : Stepper - Attr ------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' stepper') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ----------------- DevBrain Component : Stepper - Content ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="stepper">
+<div {{ get_attributes(_attr) }}>
     Stepper
 </div>
