--- a/sass/components/_announcement.scss
+++ b/sass/components/_announcement.scss
@@ -29,3 +29,39 @@ $announcement--height: 40px !default;
     color           : var(--announcement--text-color);
     background-color: var(--announcement--background-color);
 }
+
+
+
+
+// /* styles.css */
+// .announcement-bar {
+//     width: 100%;
+//     overflow: hidden;
+//     background-color: #333;
+//     color: #fff;
+//     padding: 10px 0;
+//     position: relative;
+//     white-space: nowrap;
+//   }
+  
+//   .announcement-content {
+//     display: inline-block;
+//     white-space: nowrap;
+//     animation: scroll 20s linear infinite;
+//   }
+  
+//   @keyframes scroll {
+//     0% {
+//       transform: translateX(100%);
+//     }
+//     100% {
+//       transform: translateX(-100%);
+//     }
+//   }
+  
+//   .announcement-text {
+//     display: inline-block;
+//     padding: 0 50px;
+//   }
+  
+  
