--- a/sass/components/_switch.scss
+++ b/sass/components/_switch.scss
@@ -10,6 +10,7 @@
 @use './../abstracts/mixins/sizes';
 @use './../abstracts/mixins/spaces';
 @use './../abstracts/mixins/position';
+@use './../abstracts/mixins/transition';
 
 
 /// Switch variables
@@ -23,10 +24,22 @@ $switch-width-px: #{$switch-width}px;
 $switch-height-px: #{$switch-height}px;
 
 
+$default--switch-off--border-color         : $gray-700;
+$default--switch-off--background-color     : $gray-200;
+$default--switch-off--indicator-color      : $gray-700;
+
+$default--switch-on--border-color          : $blue;
+$default--switch-on--background-color      : $blue;
+$default--switch-on--indicator-color       : $white;
+
+$default--switch-disabled--border-color    : $gray-500;
+$default--switch-disabled--background-color: $gray-200;
+$default--switch-disabled--indicator-color : $gray-500;
+
+
 /// Switch component
 /// =============================================
 ///
-
 
 .switch {
     @include flex.middle;
@@ -34,47 +47,70 @@ $switch-height-px: #{$switch-height}px;
 
     padding-left: math.div($switch-width, 16) + map-get($spacers, 3 );
 
+
+    // Switch Input
+    // --
+
     &-input {
         display: none;
     }
 
+    
+    // Switch Slider
+    // --
+
     &-slider {
         @include position.absolute(null, null, null, 0);
         @include sizes.set($switch-width-px, $switch-height-px);
+        @include transition.set((background-color), map-get($delays, normal));
     
         cursor: pointer;
         border-width: 1px;
         border-style: solid;
         border-radius: $switch-height-px;
-        transition: background-color map-get($delays , normal);
-        
+
         // Theme
-        // @include theme.property(border-color, switch-slider-off--border-color);
-        // @include theme.property(background-color, switch-slider-off--background-color);
+        border-color    : var(--switch-off--border-color, $default--switch-off--border-color);
+        background-color: var(--switch-off--background-color, $default--switch-off--background-color);
 
         &:before {
             @include position.absolute(null, null, 1px, 2px);
             @include sizes.set(calc($switch-height-px - 4px), calc($switch-height-px - 4px));
-            // @include theme.property(background-color, switch-slider-off--indicator-color);
-            
+            @include transition.set((left, background-color), map-get($delays, normal));
             content: "";
             border-radius: 50%;
-            transition: map-get($delays , normal);
+            
+            // Theme
+            background-color: var(--switch-off--indicator-color, $default--switch-off--indicator-color);
         }
     }
 
+    &-input {
+        &:checked + .switch-slider {
+            border-color    : var(--switch-on--border-color, $default--switch-on--border-color);
+            background-color: var(--switch-on--background-color, $default--switch-on--background-color);
+
+            &:before {
+                background-color: var(--switch-on--indicator-color, $default--switch-on--indicator-color);
+                left: calc($switch-width-px - $switch-height-px + 1px);
+            }
+        }
+
+        &:disabled + .switch-slider {
+            border-color    : var(--switch-disabled--border-color, $default--switch-disabled--border-color);
+            background-color: var(--switch-disabled--background-color, $default--switch-disabled--background-color);
+
+            &:before {
+                background-color: var(--switch-disabled--indicator-color, $default--switch-disabled--indicator-color);
+            }
+        }
+    }
+
+    
+    // Switch Label
+    // --
+
     &-label {
         // border: 1px solid red;
-    }
-}
-
-
-.switch-input:checked + .switch-slider {
-    // @include theme.property(border-color, switch-slider-on--border-color);
-    // @include theme.property(background-color, switch-slider-on--background-color);
-
-    &:before {
-        // @include theme.property(background-color, switch-slider-on--indicator-color);
-        left: calc($switch-width-px - $switch-height-px + 1px);
     }
 }
