--- a/src/Resources/templates/avatar/avatar.html.twig
+++ b/src/Resources/templates/avatar/avatar.html.twig
@@ -1,11 +1,24 @@
 {# ----------------- DevBrain Component : Avatar - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------- DevBrain Component : avatar - Attr ------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' avatar') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ----------------- DevBrain Component : Avatar - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="avatar">
+<div {{ get_attributes(_attr) }}>
     Avatar
 </div>
