--- a/src/Resources/templates/badge/badge.html.twig
+++ b/src/Resources/templates/badge/badge.html.twig
@@ -1,11 +1,24 @@
 {# ------------------ DevBrain Component : Badge - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------- DevBrain Component : Badge - Attr -------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' badge') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ------------------ DevBrain Component : Badge - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="badge">
+<div {{ get_attributes(_attr) }}>
     Badge
 </div>
