--- a/src/Resources/templates/brand/brand.html.twig
+++ b/src/Resources/templates/brand/brand.html.twig
@@ -1,11 +1,24 @@
 {# ------------------ DevBrain Component : Brand - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------- DevBrain Component : Brand - Attr -------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' brand') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ------------------ DevBrain Component : Brand - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<a class="brand" href="#">
+<a href="#" {{ get_attributes(_attr) }}>
     Company
 </a>
