--- a/src/Resources/templates/breadcrumb/breadcrumb.html.twig
+++ b/src/Resources/templates/breadcrumb/breadcrumb.html.twig
@@ -1,11 +1,24 @@
 {# --------------- DevBrain Component : Breadcrumb - Settings --------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# --------------- DevBrain Component : Breadcrumb - Content ---------------- #}
+{# ----------------- DevBrain Component : Breadcrumb - Attr ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="breadcrumb">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' breadcrumb') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ---------------- DevBrain Component : Breadcrumb - Content --------------- #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Breadcrumb
 </div>
