--- a/src/Resources/templates/calendar/calendar.html.twig
+++ b/src/Resources/templates/calendar/calendar.html.twig
@@ -1,11 +1,24 @@
-{# ---------------- DevBrain Component : Calendar - Settings ---------------- #}
+{# ---------------- DevBrain Component : Calendar - Settings --------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ---------------- DevBrain Component : Calendar - Content ----------------- #}
+{# ----------------- DevBrain Component : Calendar - Attr ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="alert">
-    Alert
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' calendar') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ---------------- DevBrain Component : Calendar - Content ---------------- #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
+    Calendar
 </div>
