--- a/src/Resources/templates/carousel/carousel.html.twig
+++ b/src/Resources/templates/carousel/carousel.html.twig
@@ -1,11 +1,24 @@
 {# ---------------- DevBrain Component : Carousel - Settings ---------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------ DevBrain Component : Carousel - Attr ------------------ #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' carousel') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ---------------- DevBrain Component : Carousel - Content ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="carousel">
+<div {{ get_attributes(_attr) }}>
     Carousel
 </div>
