--- a/src/Resources/templates/dialog/dialog.html.twig
+++ b/src/Resources/templates/dialog/dialog.html.twig
@@ -1,11 +1,24 @@
 {# ----------------- DevBrain Component : Dialog - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------- DevBrain Component : Dialog - Attr ------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' dialog') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ----------------- DevBrain Component : Dialog - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="dialog">
+<div {{ get_attributes(_attr) }}>
     Dialog
 </div>
