--- a/src/Resources/templates/figure/figure.html.twig
+++ b/src/Resources/templates/figure/figure.html.twig
@@ -1,11 +1,24 @@
 {# ----------------- DevBrain Component : Figure - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ----------------- DevBrain Component : Figure - Content ------------------ #}
+{# ------------------- DevBrain Component : Figure - Attr ------------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="figure">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' figure') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ------------------ DevBrain Component : Figure - Content ----------------- #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Figure
 </div>
