--- a/src/Resources/templates/gallery/gallery.html.twig
+++ b/src/Resources/templates/gallery/gallery.html.twig
@@ -1,11 +1,24 @@
-{# ----------------- DevBrain Component : Gallery - Settings ---------------- #}
+{# ---------------- DevBrain Component : Gallery - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------ DevBrain Component : Gallery - Attr ------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' gallery') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ----------------- DevBrain Component : Gallery - Content ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="gallery">
+<div {{ get_attributes(_attr) }}>
     Gallery
 </div>
