--- a/src/Resources/templates/hero/hero.html.twig
+++ b/src/Resources/templates/hero/hero.html.twig
@@ -1,11 +1,28 @@
 {# ------------------ DevBrain Component : Hero - Settings ------------------ #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ------------------ DevBrain Component : Hero - Content ------------------- #}
+{# -------------------- DevBrain Component : Hero - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="hero">
-    Hero
-</div>
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' hero') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ------------------- DevBrain Component : Hero - Content ------------------ #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
+    <div class="hero-content">
+        
+        Hero 
+
+    </div>
+</section>
