--- a/src/Resources/templates/loading/loading.html.twig
+++ b/src/Resources/templates/loading/loading.html.twig
@@ -1,11 +1,24 @@
 {# ----------------- DevBrain Component : Loading - Settings ---------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# ----------------- DevBrain Component : Loading - Content ----------------- #}
+{# ------------------- DevBrain Component : Loading - Attr ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="loading">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' loading') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ------------------ DevBrain Component : Loading - Content ---------------- #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Loading
 </div>
