--- a/src/Resources/templates/navigation/navigation.html.twig
+++ b/src/Resources/templates/navigation/navigation.html.twig
@@ -1,12 +1,25 @@
 {# --------------- DevBrain Component : Navigation - Settings --------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# --------------- DevBrain Component : Navigation - Content ---------------- #}
+{# ----------------- DevBrain Component : Navigation - Attr ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<nav class="navigation">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' navigation') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ---------------- DevBrain Component : Navigation - Content --------------- #}
+{# -------------------------------------------------------------------------- #}
+<nav {{ get_attributes(_attr) }}>
     <div class="container-fluid">
 
         {# Brand Link #}
