--- a/src/Resources/templates/pagination/pagination.html.twig
+++ b/src/Resources/templates/pagination/pagination.html.twig
@@ -1,11 +1,24 @@
 {# --------------- DevBrain Component : Pagination - Settings --------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
 
 
 
-{# --------------- DevBrain Component : Pagination - Content ---------------- #}
+{# ----------------- DevBrain Component : Pagination - Attr ----------------- #}
 {# -------------------------------------------------------------------------- #}
-<div class="pagination">
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' pagination') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
+
+
+
+{# ---------------- DevBrain Component : Pagination - Content --------------- #}
+{# -------------------------------------------------------------------------- #}
+<div {{ get_attributes(_attr) }}>
     Pagination
 </div>
