--- a/src/Resources/templates/toast/toast.html.twig
+++ b/src/Resources/templates/toast/toast.html.twig
@@ -1,11 +1,24 @@
 {# ------------------ DevBrain Component : Toast - Settings ----------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{% set _class = class|default('') %}
+
+
+
+{# ------------------- DevBrain Component : Toast - Attr -------------------- #}
+{# -------------------------------------------------------------------------- #}
+
+{% set _attr = attr|default({}) %}
+
+{# Class Attribute #}
+{% set _attr = _attr|merge({class: ''}) %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' toast') %}
+{% set _attr = add_attribute(_attr, 'class', _attr.class ~' ' ~ _class) %}
 
 
 
 {# ------------------ DevBrain Component : Toast - Content ------------------ #}
 {# -------------------------------------------------------------------------- #}
-<div class="toast">
+<div {{ get_attributes(_attr) }}>
     Toast
 </div>
