--- a/src/Resources/templates/navigation/navigation.default.html.twig
+++ b/src/Resources/templates/navigation/navigation.default.html.twig
@@ -23,7 +23,7 @@
     <div class="container-fluid">
 
         {# Brand Link #}
-        {% component 'brand' part 'text' %}
+        {# {% component 'brand' part 'text' %} #}
 
         <button class="navigation-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
