--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -18,6 +18,7 @@
 
 .container,
 .container-fluid {
+    display: block;
     width: 100%;
     padding-right: map-get($spacers, 3);
     padding-left: map-get($spacers, 3);
